--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "deyoung-choppa",
   "version": "1.0.0",
   "dependencies": {
+    "fs-extra": "^8.1.0",
     "jimp": "^0.9.3",
     "node-watch": "^0.6.3"
   }
